# fogo-os

./: .gitignore  README.md  build_and_push.sh  cleanup_resources.sh  facial_recognition.ipynb  pyproject.toml  repo-structure.txt
.github/workflows/: deploy.yml
firehouse/: main.py
firehouse/api/: endpoints.py
infra/: main.tf  terraform.tfstate
lambda/: Dockerfile  handler.py  requirements.txt
videos/: dad.HEIC
